<resources>
    <string name="app_name" translatable="false">Bookify</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="reading">Reading</string>
    <string name="library">Bookshelf</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="message_token" translatable="false">message_token</string>

    <string name="skip_first_form_message"><u>Skip the form</u></string>
    <string name="description_first_form_text">To improve your experience in this application, we recommend that you waste a part of your time to make this form so that in the future, we can offer you the best book recommendations. This form is not mandatory.</string>
    <string name="select_genres_first_form_title">Select your genres</string>
    <string name="select_genres_first_form_text">First, you must select the genres of books that interest you.</string>
    <string name="separator_text" translatable="false">Separator</string>
    <string name="cardView_unmark" translatable="false">0</string>
    <string name="cardView_mark" translatable="false">1</string>
    <string name="select_read_books_first_form_title">Select your read books</string>
    <string name="select_read_books_first_form_text">Second, you must select the books that you have read.</string>
    <string name="cardView_add" translatable="false">0</string>
    <string name="cardView_remove" translatable="false">1</string>
    <string name="select_interested_books_first_form_title">Books that interest you</string>
    <string name="select_interest_books_first_form_text">Finally, you must select the books that you are interested.</string>
    <string name="done_first_form_title">Thank you!</string>
    <string name="done_first_form_text">Finally, we have correctly configured your library and have optimized your searches based on the options that you have chosen. These options can be modified in the future if you wish.</string>
    <string name="done_redirect_first_form_text">To start using the application, press "done" for the changes to take effect.</string>
    <string name="done_end">Done</string>
    <string name="last_added">Latest additions</string>
    <string name="search_bar">Search by book title or users</string>

    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>

    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="top_rated">Top rated</string>
    <string name="gender">GENDER</string>
    <string name="publication">PUBLICATION</string>
    <string name="extension">EXTENSION</string>
    <string name="paginas">Pages</string>
    <string name="discover_link"><u>Discover</u></string>
    <string name="more_books_of">More books of </string>
    <string name="more_books_genre">More books of this genre:</string>
    <string name="summary">Summary: </string>
    <string name="book_summary_text">En una noche de tormenta y barro nace una niña bastarda a la que, creyéndola muerta, bautizan con el nombre de Betsabé. Nadie sabe que en su interior lleva la fuerza de la feminidad, así como la magia y la rebeldía que la harán superar todos los obstáculos. Creará un vínculo indisoluble con su hermana de leche, Capitolina, una pobre niña rica, y ninguno quedará indiferente a su mirada de fuego. Ni siquiera Emmanuel, el revolucionario francés salido del Montparnasse más artístico que, al conocerla, caerá enfermo de amor.</string>
    <string name="reading_text_title">Reading</string>
    <string name="book_added_correctly_message"> added correctly to your Library.</string>
    <string name="book_removed_correctly_message"> removed correctly from your Library.</string>
    <string name="pending">Pending</string>
    <string name="accountPremiumText" translatable="false">Premium</string>
    <string name="accountFreeText">Free</string>
    <string name="typeAccountExampleText" translatable="false">10/100</string>
    <string name="accountTitleProfile">PROGRESS</string>
    <string name="periodAccountText">achievements</string>
    <string name="feedbackTitleProfile">FEEDBACK</string>
    <string name="numExample" translatable="false">0</string>
    <string name="commentsFeedTitleProfile">comments</string>
    <string name="libraryTitleProfile">LIBRARY</string>
    <string name="readedbooksSubtitleProfile">books read</string>
    <string name="readedBooksTitleProfile">Books read</string>
    <string name="genrePreferencesTitleProfile">Genre preferences</string>
    <string name="diagonalBar" translatable="false">/</string>
    <string name="achievementsTitleProfile">Last achievements</string>

    <string name="biography_gender">Biography</string>
    <string name="internet_gender">Computing / Internet</string>
    <string name="education_gender">Education</string>
    <string name="crime_gender">Crime</string>
    <string name="literature_gender">Literature</string>
    <string name="health_gender">Health</string>
    <string name="romance_gender">Romance</string>
    <string name="fantasy_gender">Fantasy</string>
    <string name="adventure_gender">Adventure</string>

    <string name="rate_it_sentence">Rate it!</string>
    <string name="feeling_sentecte">How did you feel?</string>
    <string name="angry_emoji">ANGRY</string>
    <string name="happy_emoji">HAPPY</string>
    <string name="confused_emoji">CONFUSED</string>
    <string name="sad_emoji">SAD</string>
    <string name="scared_emoji">SCARED</string>
    <string name="frustrated_emoji">FRUSTRATED</string>
    <string name="shocked_emoji">SHOCKED</string>
    <string name="excited_emoji">EXCITED</string>
    <string name="bored_emoji">BORED</string>

    <string name="bad_review">BAD</string>
    <string name="ok_review">OK</string>
    <string name="good_review">GOOD</string>
    <string name="great_review">GREAT</string>
    <string name="wow_review">WOW</string>

    <string name="comments">Reviews</string>
    <string name="cancel_upper_case">CANCEL</string>
    <string name="accept_upper_case">ACCEPT</string>
    <string name="search_book">by title</string>
    <string name="add_comment">Add a comment</string>
    <string name="see_comments">Comments</string>
    <string name="share">Share</string>
    <string name="fake_date">1st October</string>
    <string name="fake_pages">Pages</string>
    <string name="review_added_correctly">Your review was added correctly!</string>
    <string name="comment_added_correctly">Your comment was added correctly!</string>
    <string name="achievements_image" translatable="false">Achievements image</string>
    <string name="example_text" translatable="false">Example</string>
    <string name="Lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="Card_title_text" translatable="false">Card title</string>
    <string name="imageview_adapter_text" translatable="false">ImageView adapter</string>
    <string name="booktitle_text" translatable="false">BookTitle</string>
    <string name="done_text">Done</string>
    <string name="example_year" translatable="false">2017</string>
    <string name="total_rate" translatable="false">/5</string>
    <string name="rate_example" translatable="false">4.4</string>
    <string name="upgrade_account_text">Upgrade account</string>
    <string name="configuration_text">Configuration</string>

    <string name="euro_currency">€</string>

    <string name="publish_title">PUBLISH</string>
    <string name="delete">Delete Comment</string>
    <string name="delete_comment_alert_dialog">Are you sure you want to delete the comment ?</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete_correct">Review deleted correctly!</string>
    <string name="any_book_yet">Any book yet. Click on the button below to discover new ones!</string>
    <string name="facebook_app_id">2457878697756823</string>
    <string name="fb_login_protocol_scheme">fb2457878697756823</string>

    <string name="or_text">or</string>


    <string name="booki">Bookify</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Improve your reading experience</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Sign In via Facebook or Gmail</string>
    <string name="password">Password</string>
    <string name="sign_up">or</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="achievements_text">Achievements</string>

    <string name="wifi_ok" translatable="false">wifi_ok</string>
    <string name="mobile_ok" translatable="false">mobile_ok</string>
    <string name="internet_ko" translatable="false">internet_ko</string>

    <string name="client_id_paypal" translatable="false">ASOBY-QQvBf_kxLtW8pzZo0e7Giaj34a5ECUYzo8WBitAGQoo1HT0YBfDCYU2xe6TxBtUQj5qFRHXm7v</string>
    <string name="any_comment_yet">Any comment yet!</string>
</resources>
