<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical"
        android:weightSum="21"
        tools:context=".FirstTimeForm.FirstTimeFormActivity">

        <!-- Head -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/titleDoneFirstForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/done_first_form_title"
                android:textColor="@android:color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <!-- Description of this activity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description_done_form_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done_first_form_text"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/imageViewSeparator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:contentDescription="@string/separator_text"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_bright" />

            <TextView
                android:id="@+id/description_done_redirect_form_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done_redirect_first_form_text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonFirstFormDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Done"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>