<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical"
        android:weightSum="10"
        tools:context=".FirstTimeForm.FirstTimeFormActivity">

        <!-- Skip the form -->

        <TextView
            android:id="@+id/textSkipFirstForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/skip_first_form_message"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Head -->
        <TextView
            android:id="@+id/titleFirstForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="6dp"
            android:text="@string/select_read_books_first_form_title"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <!-- Description of this activity -->

        <TextView
            android:id="@+id/description_first_activity_form_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/select_read_books_first_form_text"
            android:textColor="@android:color/black" />

        <SearchView
            android:id="@+id/search_bar_read_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:iconifiedByDefault="false"
            android:queryHint="Search books"
            android:layout_marginEnd="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="4dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewReadBooks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>